@@ -4,6 +4,7 @@
 - Optimize: Remove multiple RGB to grey conversion in OCR.
 - Fix: Update UTF8Proc to 2.2.0
 - Fix: Warn instead of fatal when a 0xFF marker is missing
+- Fix: Segfault in general_loop.c because of enc_ctx is NULL pointer
 
 0.87 (2018-10-23)
 -----------------
